<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.startupinsa.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.startupinsa.app.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.startupinsa.app.ui.achievements.AchievementsFragment"
        android:label="@string/title_achievements"
        tools:layout="@layout/fragment_achievements" />

    <fragment
        android:id="@+id/navigation_estimate"
        android:name="com.startupinsa.app.ui.estimate.EstimateFragment"
        android:label="@string/title_estimate"
        tools:layout="@layout/fragment_estimate" />

    <fragment
    android:id="@+id/navigation_contact"
    android:name="com.startupinsa.app.ui.contact.ContactFragment"
    android:label="@string/title_contact"
    tools:layout="@layout/fragment_contact" />
</navigation>